--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,14 +1,18 @@
 <nav class="navigation">
-  <ul class="navigation__list">
-    <% if (menuLinks.length > 0) { %> <% menuLinks.forEach(link => { %>
-    <li class="navigation__item">
-      <a
-        class="navigation__link <%= activeLinkPath === link.path ? 'navigation__link--active' : '' %>"
-        href="<%= link.path %>"
-      >
-        <%= link.label %>
-      </a>
-    </li>
-    <% }); %> <% } %>
-  </ul>
+    <ul class="navigation__list">
+        <% if (menuLinks.length > 0) { %>
+            <% menuLinks.forEach(link => { %>
+                <li class="navigation__item">
+                    <a class="navigation__link <%= activeLinkPath === link.path ? 'navigation__link--active' : '' %>" href="<%= link.path %>">
+                        <%= link.label %>
+                    </a>
+                </li>
+                <% }); %>
+                    <% } %>
+                        <li class="navigation__item navigation__cart">
+                            Cart
+                            <img src="https://cdn.jsdelivr.net/npm/lucide-static@latest/icons/shopping-cart.svg" alt="Cart" class="navigation__cart" />
+                            <span class="navigation__badge"><%= cartCount || 0 %></span>
+                        </li>
+    </ul>
 </nav>
